org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/CallOperation/004_CallOperation_paramTypes.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard
using kermeta::io::StdIO => stdio

using org::kermeta::language::structure


package test {
    class Main
    {
        operation main() : Void is do
        	/*var b : B[String] init B[String].new
        	b.foo(1)*/
        end
    }
	
 	class A[X] {
 	   	operation foo(x : X) : Void is do
		end
 	
 	
 	}
 	
    class C[X] inherits A[X] {
    	
    	method foo(x : X) : Void is do
    		super(x)
    		
		end
		
	
	
    }
	
	
	
}



