org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/003_Property_attribute_opposite.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard

package test {
	
	class Main {
		operation main() : Void is do
		end
	}
	
	class A
	{
		attribute b : B#a
		
			
	}
	
	
	class B {
	
		attribute a : A#b
				
	}
	

}

